# br-core

./: README.md  pyproject.toml
src/br_core/: __init__.py  exceptions.py
src/br_core/models/: llm_messages.py
